	PR tree-optimization/82381 	* tree-ssa-reassoc.c (sort_by_operand_rank): Don't check 	stmt_to_insert nor wheather SSA_NAMEs are default defs. 	Return 1 or -1 if one of bba and bbb is NULL. If bb_rank is equal, 	fallthrough into reassoc_stmt_dominates_stmt_p.

* gcc.c-torture/compile/pr82381.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@253379 138bc75d-0d04-0410-961f-82ee72b054a4